Resolvendo o overflow

--- a/style.css
+++ b/style.css
@@ -12,17 +12,11 @@
     --altCarta: 170px;
 }
 
-html{
-    overflow-x: hidden;
-}
-
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #016d22;
     width: 100vw;
     height: 100vh;
-    overflow-x: hidden;
-    overflow-y: hidden;
     color: black;
 }
 
@@ -563,6 +557,7 @@ button{
         grid-template-rows: 1fr 2fr;
         grid-template-columns: 1fr 1fr;
         position: relative;
+        width: 100%;
     }
 
     .cont{
@@ -603,6 +598,7 @@ button{
     }
 
 
+
 }
 
 /* Feita */
@@ -615,6 +611,10 @@ button{
 
     #botoes{
         position: inherit;
+    }
+
+    #usuario, #ad{
+        width: 100%;
     }
 
     #informacoesUser, #informacoesAd{
@@ -644,6 +644,10 @@ button{
 
     #usuario, #ad{
         border-width: 3px;
+    }
+
+    #usuario, #ad{
+        width: 100%;
     }
 
     #escolha{
